--- a/.github/workflows/build-commit.yml
+++ b/.github/workflows/build-commit.yml
@@ -14,6 +14,11 @@ jobs:
       uses: actions/checkout@v4
     - name: Clippy
       run: |
+        rustup
+        component
+        add
+        clippy
+        &&
         cargo
         clippy
         --lib
