--- a/.github/workflows/build-pull-request.yml
+++ b/.github/workflows/build-pull-request.yml
@@ -30,4 +30,18 @@ jobs:
         -Wclippy::expect_used \
         -Wclippy::unwrap_used
     - name: Build
-      run: cargo build --release --verbose
+      run: |
+        sudo            \
+        apt             \
+        install         \
+        avr-libc        \
+        gcc-avr         \
+        pkg-config      \
+        avrdude         \
+        libudev-dev     \
+        build-essential \
+        &&              \
+        cargo           \
+        build           \
+        --release       \
+        --verbose
