--- a/.github/workflows/build-commit.yml
+++ b/.github/workflows/build-commit.yml
@@ -49,4 +49,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: grprp-artifacts
-        path: target\avr-atmega328p\release\grprp.elf
+        path: target/avr-atmega328p/release/grprp.elf
