--- a/wokwi.toml
+++ b/wokwi.toml
@@ -1,4 +1,4 @@
 [wokwi]
 version = 1
-firmware = 'target\avr-atmega328p\release\grprp.elf'
-elf = 'target\avr-atmega328p\release\grprp.elf'
+firmware = 'target/avr-atmega328p/release/grprp.elf'
+elf = 'target/avr-atmega328p/release/grprp.elf'
